# teleflattracker

./: .gitignore  LICENSE  README.md  database_manager.py  llm_processor.py  main.py  message_processor.py  schema.py  telegram_data.db  test.session
backend/: data_normalization.py  database_manager.py  llm_processor.py  main.py  message_processor.py  mypy.ini  pyproject.toml  requirements.txt  schema.py  telegram_data.db  telegram_data_backup.db  telegram_data_backup_2.db  test.session
backend/api/: app.py
backend/src/flattracker/: config.py  data_normalization.py  database_manager.py  llm_processor.py  main.py  message_processor.py  schema.py  tg_extractor.py
backend/src/flattracker/api/: app.py
backend/tests/: test_database_manager.py  test_llm_processor.py  test_tg_extractor.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: index.css
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
